# Simpmail

./: Cargo.toml
src/: client.rs  error.rs  lib.rs  models.rs  types.rs
