[package]
name = "sempmail"
version = "0.1.0"
edition = "2021"
description = "Simplify temporary email management and interaction"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/sempmail"
keywords = ["email", "temporary", "tempmail", "api"]
categories = ["api-bindings", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

