[package]
name = "simpmail"
version = "0.1.0"
edition = "2021"
authors = ["Heet Vavdiya heetvavadiya456@gmail.com"]
description = "A simple temporary email management library for Rust"
license = "MIT OR Apache-2.0"
keywords = ["email", "temporary", "mail", "temp", "disposable"]
categories = ["email", "network-programming", "web-programming"]
repository = "https://github.com/yourusername/simpmail"
documentation = "https://docs.rs/simpmail"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
base64 = "0.21"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
